<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizChooseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/test_choose_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:src="@drawable/test"
            android:contentDescription="@string/content_description_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/seeWord_solveMeaning_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="#0099FF"
            android:textColor="#FFFFFF"
            android:text="@string/test1_btn"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/seeMeaning_solveWord_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="#0099FF"
            android:textColor="#FFFFFF"
            android:text="@string/test2_btn"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/inputSpelling_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:background="#0099FF"
            android:textColor="#FFFFFF"
            android:text="@string/test3_btn"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>