<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/subclass_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/subclass_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subclass_item_list_btn"
            android:textColor="#000000"
            android:textSize="20sp"
            android:focusable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subclass_item_contour"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <TextView
            android:id="@+id/subclass_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subclass_item_test_btn"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginEnd="32dp"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#999999"/>
</LinearLayout>